data/all_generated_tests/raw_wast_tests/nop_ImproperFunctionCallorReturnHandling_610.wast
;; 1. **Test Description 1**:    - **Scenario**: Place a `nop` instruction immediately before a `call` to a function that returns a value.    - **Constraint Check**: Verify that the `nop` does not alter the stack or the flow before the function call.    - **Relation to Improper Handling**: Ensures that `nop` does not disrupt the proper pushing and popping of return values from the stack.

(assert_invalid
  (module 
    (func $callee (result i32) (i32.const 42))
    (func (nop) (call $callee))
  )
  "type mismatch"
)